...
        OutlinedTextField(
            value = state.createAlbum.name ?: "",
            onValueChange = {
                updateField(state.createAlbum.copy(name = it))
            },
            singleLine = true,
            label = { Text(text = stringResource(R.string.nombre),modifier = modifier.testTag("nombreAlbum"),) },
            keyboardOptions = KeyboardOptions.Default.copy(
                imeAction = ImeAction.Next
            ),
            isError = state.createAlbum.name.isNullOrBlank() && state.hasSent,
            modifier = Modifier
                .padding(bottom = 8.dp)
...
                Button(onClick = {
                    addAlbum {
                        onSuccess()
                    }
                }
                ) {
                    Text("Guardar", modifier = modifier.testTag("guardarAlbum"))
                }
            }
        } else {
            Row(
                horizontalArrangement = Arrangement.Center,
                verticalAlignment = Alignment.CenterVertically,
...
