...
                        .fillMaxWidth()
                        .height(80.dp))
            }
        }
        ExtendedFloatingActionButton(
            onClick = goToCreate,
            icon = { Icon(Icons.Filled.Add, contentDescription = "Agregar nuevo álbum", modifier.testTag("agregarAlbum")) },
            text = { Text(text = stringResource(R.string.agregar)) },
            modifier = Modifier
                .align(Alignment.BottomEnd)
                .padding(8.dp)
        )

...
