...
    }

}

@Composable
fun AlbumsList(albumList: List<Album>, modifier: Modifier = Modifier) {
    LazyColumn(modifier = modifier.testTag("albums_list")) {
        items(albumList) { album ->
            AlbumCard(album = album)
            Divider()
        }
    }
}
...
