...
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Column {
                    Text(
                        text = album.name,
                        modifier = modifier.testTag("album_name"),
                        style = MaterialTheme.typography.headlineMedium
                    )
                    Text(
                        text = album.genre.orEmpty(),
                        style = MaterialTheme.typography.labelLarge
                    )
...
